Added WorkflowDefinition implementation that uses coroutines Added lint fixes to flow.
Reviewers: samar, sivakk

Reviewed By: sivakk

Subscribers: aravindv, venkat

Differential Revision: https://code.uberinternal.com/D654759

--- a/glide.yaml
+++ b/glide.yaml
@@ -11,6 +11,8 @@ import:
   subpackages:
   - thrift
 testImport:
-- package: github.com/stretchr/testify
-  subpackages:
-  - assert
+#- package: github.com/stretchr/testify
+#  subpackages:
+#  - assert
+- package: github.com/golang/mock/gomock
+
