Fix docker file (#815)

--- a/docker/buildkite/docker-compose-local.yml
+++ b/docker/buildkite/docker-compose-local.yml
@@ -23,7 +23,7 @@ services:
           - statsd
 
   cadence:
-    image: ubercadence/server:master
+    image: ubercadence/server:master-auto-setup
     ports:
       - "7933:7933"
       - "7934:7934"
