Use go modules (#840)
* Use go modules

Fix #839, #812.

Change was produced by these steps:
1) Perform go mod init
2) Update Makefile
3) Remove excessive replace directives in go.mod
4) Run tests
5) Perform go mod tidy
6) Remove dep and glide files

* Workaround versioned_go_build.sh for go1.13

Trigger GO111MODULE=off for now, there should be better
solution, but will require complete rewrite or external
tool usage.

See:
* https://github.com/myitcv/gobin
* https://github.com/golang/go/issues/25922

* Fix linter warnings

* Use go1.13 in CI Dockerfile

* Revert to go1.12 in integration tests

* Explicitly wait for cadence in integration tests

--- a/docker/buildkite/docker-compose-local.yml
+++ b/docker/buildkite/docker-compose-local.yml
@@ -52,6 +52,7 @@ services:
         make integ_test_sticky_off
     environment:
       - "SERVICE_ADDR=cadence:7933"
+      - "GO111MODULE=on"
     depends_on:
       - cadence
     volumes:
@@ -73,6 +74,7 @@ services:
         make integ_test_sticky_on
     environment:
       - "SERVICE_ADDR=cadence:7933"
+      - "GO111MODULE=on"
     depends_on:
       - cadence
     volumes:
@@ -92,6 +94,8 @@ services:
       - -c
       - |
         make unit_test
+    environment:
+      - "GO111MODULE=on"
     volumes:
       - ../../:/go/src/go.uber.org/cadence
     networks:
@@ -109,6 +113,8 @@ services:
       - -c
       - |
         make .build/coverage/cover.out
+    environment:
+      - "GO111MODULE=on"
     volumes:
       - ../../:/go/src/go.uber.org/cadence
 
