--- a/docker/buildkite/Dockerfile
+++ b/docker/buildkite/Dockerfile
@@ -6,3 +6,6 @@ RUN go get -u github.com/golang/dep/cmd/dep \
 
 RUN mkdir -p /go/src/go.uber.org/cadence
 WORKDIR /go/src/go.uber.org/cadence
+
+ADD go.mod go.sum /go/src/go.uber.org/cadence/
+RUN GO111MODULE=on go mod download
