--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,19 +1,19 @@
 steps:
   - label: ":golang: unit-test"
     agents:
-      queue: "workers"
+      queue: "default"
       docker: "*"
     command: "make unit_test"
     artifact_paths:
       - ".build/coverage/*.out"
     plugins:
-      - docker-compose#v3.0.0:
+      - docker-compose#v3.1.0:
           run: unit-test
           config: docker/buildkite/docker-compose.yml
 
   - label: ":golang: integration-test-sticky-off"
     agents:
-      queue: "workers"
+      queue: "default"
       docker: "*"
     command: "make integ_test_sticky_off"
     artifact_paths:
@@ -22,13 +22,13 @@ steps:
       automatic:
         limit: 1
     plugins:
-      - docker-compose#v3.0.0:
+      - docker-compose#v3.1.0:
           run: integ-test
           config: docker/buildkite/docker-compose.yml
 
   - label: ":golang: integration-test-sticky-on"
     agents:
-      queue: "workers"
+      queue: "default"
       docker: "*"
     command: "make integ_test_sticky_on"
     artifact_paths:
@@ -37,7 +37,7 @@ steps:
       automatic:
         limit: 1
     plugins:
-      - docker-compose#v3.0.0:
+      - docker-compose#v3.1.0:
           run: integ-test
           config: docker/buildkite/docker-compose.yml
 
@@ -45,10 +45,10 @@ steps:
 
   - label: ":golang: code-coverage"
     agents:
-      queue: "workers"
+      queue: "default"
       docker: "*"
     command: ".buildkite/scripts/gocov.sh"
     plugins:
-      - docker-compose#v3.0.0:
+      - docker-compose#v3.1.0:
           run: coverage-report
           config: docker/buildkite/docker-compose.yml
