--- a/docker/buildkite/Dockerfile
+++ b/docker/buildkite/Dockerfile
@@ -1,8 +1,6 @@
-FROM golang:1.12.1
+FROM golang:1.13.3
 
-RUN go get -u github.com/golang/dep/cmd/dep \
-  && go get -u github.com/Masterminds/glide \
-  && go get -u golang.org/x/lint/golint
+RUN go get -u golang.org/x/lint/golint
 
 RUN mkdir -p /go/src/go.temporal.io/temporal
 WORKDIR /go/src/go.temporal.io/temporal
