update docker-compose to use grpc ports

--- a/docker/buildkite/docker-compose.yml
+++ b/docker/buildkite/docker-compose.yml
@@ -25,10 +25,10 @@ services:
   temporal:
     image: temporalio/temporal:master-auto-setup
     ports:
-      - "7933:7933"
-      - "7934:7934"
-      - "7935:7935"
-      - "7939:7939"
+      - "7233:7233"
+      - "7234:7234"
+      - "7235:7235"
+      - "7239:7239"
     environment:
       - "CASSANDRA_SEEDS=cassandra"
       - "STATSD_ENDPOINT=statsd:8125"
@@ -46,7 +46,7 @@ services:
       context: ../../
       dockerfile: ./docker/buildkite/Dockerfile
     environment:
-      - "SERVICE_ADDR=cadence:7933"
+      - "SERVICE_ADDR=temporal:7233"
       - "GO111MODULE=on"
     depends_on:
       - temporal
