Update to go 1.14.

--- a/docker/buildkite/Dockerfile
+++ b/docker/buildkite/Dockerfile
@@ -1,9 +1,7 @@
-FROM golang:1.13.3
-
-RUN go get -u golang.org/x/lint/golint
+FROM golang:1.14
 
 RUN mkdir -p /go/src/go.temporal.io/temporal
 WORKDIR /go/src/go.temporal.io/temporal
 
 ADD go.mod go.sum /go/src/go.temporal.io/temporal/
-RUN GO111MODULE=on go mod download
+RUN go mod download
