Change package name.

--- a/docker/buildkite/Dockerfile
+++ b/docker/buildkite/Dockerfile
@@ -1,7 +1,7 @@
 FROM golang:1.14
 
-RUN mkdir -p /go/src/go.temporal.io/temporal
-WORKDIR /go/src/go.temporal.io/temporal
+RUN mkdir -p /go/src/go.temporal.io/sdk
+WORKDIR /go/src/go.temporal.io/sdk
 
-ADD go.mod go.sum /go/src/go.temporal.io/temporal/
+ADD go.mod go.sum /go/src/go.temporal.io/sdk/
 RUN go mod download
