--- a/docker/buildkite/docker-compose-local.yml
+++ b/docker/buildkite/docker-compose-local.yml
@@ -57,7 +57,7 @@ services:
     depends_on:
       - temporal
     volumes:
-      - ../../:/go/src/go.temporal.io/temporal
+      - ../../:/go/src/go.temporal.io/sdk
     networks:
       services-network:
         aliases:
@@ -79,7 +79,7 @@ services:
     depends_on:
       - temporal
     volumes:
-      - ../../:/go/src/go.temporal.io/temporal
+      - ../../:/go/src/go.temporal.io/sdk
     networks:
       services-network:
         aliases:
@@ -98,7 +98,7 @@ services:
     environment:
       - "GO111MODULE=on"
     volumes:
-      - ../../:/go/src/go.temporal.io/temporal
+      - ../../:/go/src/go.temporal.io/sdk
     networks:
       services-network:
         aliases:
@@ -117,7 +117,7 @@ services:
     environment:
       - "GO111MODULE=on"
     volumes:
-      - ../../:/go/src/go.temporal.io/temporal
+      - ../../:/go/src/go.temporal.io/sdk
 
 networks:
   services-network:
