--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ directories:
 go:
   - 1.11.x
 
-go_import_path: go.temporal.io/temporal
+go_import_path: go.temporal.io/sdk
 addons:
   apt:
     packages:
