--- a/docker/buildkite/docker-compose.yml
+++ b/docker/buildkite/docker-compose.yml
@@ -48,7 +48,7 @@ services:
     environment:
       - "GO111MODULE=on"
     volumes:
-      - ../../:/go/src/go.temporal.io/temporal
+      - ../../:/go/src/go.temporal.io/sdk
     networks:
       services-network:
         aliases:
@@ -64,7 +64,7 @@ services:
     depends_on:
       - temporal
     volumes:
-      - ../../:/go/src/go.temporal.io/temporal
+      - ../../:/go/src/go.temporal.io/sdk
     networks:
       services-network:
         aliases:
@@ -77,7 +77,7 @@ services:
     environment:
       - "GO111MODULE=on"
     volumes:
-      - ../../:/go/src/go.temporal.io/temporal
+      - ../../:/go/src/go.temporal.io/sdk
     networks:
       services-network:
         aliases:
@@ -108,7 +108,7 @@ services:
       - COVERALLS_TOKEN
       - "GO111MODULE=on"
     volumes:
-      - ../../:/go/src/go.temporal.io/temporal
+      - ../../:/go/src/go.temporal.io/sdk
       - /usr/bin/buildkite-agent:/usr/bin/buildkite-agent
 
 networks:
