--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -21,11 +21,26 @@ steps:
           run: unit-test
           config: docker/buildkite/docker-compose.yml
 
-  - label: ":golang: integration-test"
+  - label: ":golang: integration-test-sticky-off"
     agents:
       queue: "default"
       docker: "*"
-    command: "make integration-test"
+    command: "make integration-test-sticky-off"
+    artifact_paths:
+      - ".build/coverage/*.out"
+    retry:
+      automatic:
+        limit: 1
+    plugins:
+      - docker-compose#v3.1.0:
+          run: integ-test
+          config: docker/buildkite/docker-compose.yml
+
+  - label: ":golang: integration-test-sticky-on"
+    agents:
+      queue: "default"
+      docker: "*"
+    command: "make integration-test-sticky-on"
     artifact_paths:
       - ".build/coverage/*.out"
     retry:
