Deprecate & disable `DisableStickyExecution` flag (#318)
* Deprecated. Will be removed in a later release.

--- a/docker/buildkite/docker-compose-local.yml
+++ b/docker/buildkite/docker-compose-local.yml
@@ -27,7 +27,7 @@ services:
         aliases:
           - temporal
 
-  integ-test-sticky-off:
+  integ-test-zero-cache:
     build:
       context: ../../
       dockerfile: ./docker/buildkite/Dockerfile
@@ -36,7 +36,7 @@ services:
       - -e
       - -c
       - |
-        make integ_test_sticky_off
+        make integ_test_zero_cache
     environment:
       - "SERVICE_ADDR=temporal:7233"
       - "GO111MODULE=on"
@@ -47,9 +47,9 @@ services:
     networks:
       services-network:
         aliases:
-          - integ-test-sticky-off
+          - integ-test-zero-cache
 
-  integ-test-sticky-on:
+  integ-test-normal-cache:
     build:
       context: ../../
       dockerfile: ./docker/buildkite/Dockerfile
@@ -58,7 +58,7 @@ services:
       - -e
       - -c
       - |
-        make integ_test_sticky_on
+        make integ_test_normal_cache
     environment:
       - "SERVICE_ADDR=temporal:7233"
       - "GO111MODULE=on"
@@ -69,7 +69,7 @@ services:
     networks:
       services-network:
         aliases:
-          - integ-test-sticky-on
+          - integ-test-normal-cache
 
   unit-test:
     build:
