--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -7,7 +7,7 @@ steps:
     plugins:
       - docker-compose#v3.1.0:
           run: build
-          config: docker/buildkite/docker-compose.yml
+          config: ./.buildkite/docker-compose.yml
 
   - label: ":golang: unit-test"
     agents:
@@ -19,7 +19,7 @@ steps:
     plugins:
       - docker-compose#v3.1.0:
           run: unit-test
-          config: docker/buildkite/docker-compose.yml
+          config: ./.buildkite/docker-compose.yml
 
   - label: ":golang: integration-test-zero-cache"
     agents:
@@ -34,7 +34,7 @@ steps:
     plugins:
       - docker-compose#v3.1.0:
           run: integ-test
-          config: docker/buildkite/docker-compose.yml
+          config: ./.buildkite/docker-compose.yml
 
   - label: ":golang: integration-test-normal-cache"
     agents:
@@ -49,7 +49,7 @@ steps:
     plugins:
       - docker-compose#v3.1.0:
           run: integ-test
-          config: docker/buildkite/docker-compose.yml
+          config: ./.buildkite/docker-compose.yml
 
   - wait
 
@@ -61,4 +61,4 @@ steps:
     plugins:
       - docker-compose#v3.1.0:
           run: coverage-report
-          config: docker/buildkite/docker-compose.yml
+          config: ./.buildkite/docker-compose.yml
