--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -51,6 +51,16 @@ steps:
           run: integ-test
           config: ./.buildkite/docker-compose.yml
 
+  - label: ":golang: fossa"
+    agents:
+      queue: "default"
+      docker: "*"
+    command: "make fossa-init fossa-analyze"
+    plugins:
+      - docker-compose#v3.1.0:
+          run: build
+          config: ./.buildkite/docker-compose.yml
+
   - wait
 
   - label: ":golang: code-coverage"
