--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -55,7 +55,7 @@ steps:
     agents:
       queue: "default"
       docker: "*"
-    command: "make fossa-init fossa-analyze"
+    command: "make fossa-init fossa-analyze fossa-test"
     plugins:
       - docker-compose#v3.1.0:
           run: fossa
