--- a/.buildkite/docker-compose.yml
+++ b/.buildkite/docker-compose.yml
@@ -103,6 +103,7 @@ services:
       dockerfile: ./.buildkite/Dockerfile
     environment:
       - "GO111MODULE=on"
+      - BUILDKITE_BRANCH
       - FOSSA_API_KEY
     volumes:
       - ../:/go/src/go.temporal.io/sdk
