Add fossa scans (#440)

--- a/.buildkite/docker-compose.yml
+++ b/.buildkite/docker-compose.yml
@@ -97,6 +97,17 @@ services:
       - ../:/go/src/go.temporal.io/sdk
       - /usr/bin/buildkite-agent:/usr/bin/buildkite-agent
 
+  fossa:
+    build:
+      context: ../
+      dockerfile: ./.buildkite/Dockerfile
+    environment:
+      - "GO111MODULE=on"
+      - BUILDKITE_BRANCH
+      - FOSSA_API_KEY
+    volumes:
+      - ../:/go/src/go.temporal.io/sdk
+
 networks:
   services-network:
     name: services-network
