--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -56,6 +56,9 @@ steps:
       queue: "default"
       docker: "*"
     command: "make fossa-init fossa-analyze fossa-test"
+    retry:
+      automatic:
+        limit: 2
     plugins:
       - docker-compose#v3.1.0:
           run: fossa
