--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,3 @@
 # Primary owners
 
-* @mfateev @vitarb @Sushisource @alexshtin @Spikhalskiy
+* @mfateev @vitarb @Sushisource @alexshtin @Spikhalskiy @bergundy @cretz
