--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -56,6 +56,7 @@ steps:
       queue: "default"
       docker: "*"
     command: "make fossa-init fossa-analyze fossa-test"
+    branches: "master"
     retry:
       automatic:
         limit: 2
