--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,8 @@ jobs:
           path: ./docker-compose
       - name: Start Temporal server
         run: |
+          cp ./.github/workflows/docker/docker-compose.override.yaml ./docker-compose/docker-compose.override.yaml
+          cp ./.github/workflows/docker/dynamic-config-custom.yaml ./docker-compose/dynamicconfig/dynamic-config-custom.yaml
           docker-compose --project-directory ./docker-compose up &
           go run ./.github/workflows/wait_for_server.go
       - name: Integration tests (without cache)
