Update CODEOWNERS to temporalio/sdk team (#905)

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,4 @@
-# Primary owners
+# Syntax is here:
+# https://docs.github.com/en/github/creating-cloning-and-archiving-repositories/about-code-owners#codeowners-syntax
 
-* @mfateev @vitarb @Sushisource @alexshtin @Spikhalskiy @bergundy @cretz @mmcshane
+* @temporalio/sdk
