--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,6 +40,8 @@ jobs:
         run: make cover_ci
 
   cloud-test:
+    # Only supported in non-fork runs, since secrets are not available in forks.
+    if: ${{ github.event.pull_request.head.repo.full_name == '' || github.event.pull_request.head.repo.full_name == 'temporalio/sdk-go' }}
     runs-on: ubuntu-latest
     env:
       SERVICE_ADDR: tinycicd.sdk.tmprl.cloud:7233
@@ -50,12 +52,18 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: recursive
-        if: ${{ env.TEMPORAL_CLIENT_CERT != '' }}
       - uses: actions/setup-go@v2
         with:
           go-version: "1.17"
-        if: ${{ env.TEMPORAL_CLIENT_CERT != '' }}
       - name: Single integration test against cloud
         run: 'go test -v --count 1 -p 1 . -run "TestIntegrationSuite/TestBasic$"'
         working-directory: test
-        if: ${{ env.TEMPORAL_CLIENT_CERT != '' }}
+
+
+  sdk-features-test:
+    uses: temporalio/sdk-features/.github/workflows/go.yaml@main
+    with:
+      go-repo-path: ${{github.event.pull_request.head.repo.full_name}}
+      version: ${{github.event.pull_request.head.ref}}
+      version-is-repo-ref: true
+
