Enable update on CI test

--- a/.github/workflows/docker/dynamic-config-custom.yaml
+++ b/.github/workflows/docker/dynamic-config-custom.yaml
@@ -3,3 +3,7 @@ system.forceSearchAttributesCacheRefreshOnRead:
     constraints: {}
 system.enableActivityEagerExecution:
   - value: true
+frontend.enableUpdateWorkflowExecution:
+  - value: true
+frontend.enableUpdateWorkflowExecutionAsyncAccepted:
+  - value: true
