Enabled worker versioning tests

--- a/.github/workflows/docker/dynamic-config-custom.yaml
+++ b/.github/workflows/docker/dynamic-config-custom.yaml
@@ -9,3 +9,9 @@ frontend.enableUpdateWorkflowExecutionAsyncAccepted:
   - value: true
 system.enableEagerWorkflowStart:
   - value: true
+frontend.workerVersioningDataAPIs:
+  - value: true
+frontend.workerVersioningWorkflowAPIs:
+  - value: true
+worker.buildIdScavengerEnabled:
+  - value: true
