Add TaskReachability API

--- a/.github/workflows/docker/dynamic-config-custom.yaml
+++ b/.github/workflows/docker/dynamic-config-custom.yaml
@@ -15,3 +15,5 @@ frontend.workerVersioningWorkflowAPIs:
   - value: true
 worker.buildIdScavengerEnabled:
   - value: true
+worker.removableBuildIdDurationSinceDefault:
+  - value: 1
