--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -115,8 +115,9 @@ jobs:
         working-directory: test
 
   features-test:
-    uses: temporalio/features/.github/workflows/go.yaml@main
+    uses: temporalio/features/.github/workflows/go.yaml@go-sdk-update-refactor
     with:
       go-repo-path: ${{github.event.pull_request.head.repo.full_name}}
       version: ${{github.event.pull_request.head.ref}}
+      features-repo-ref: go-sdk-update-refactor
       version-is-repo-ref: true
