Rename constants, remove pointers in options

--- a/.github/workflows/docker/dynamic-config-custom.yaml
+++ b/.github/workflows/docker/dynamic-config-custom.yaml
@@ -9,6 +9,8 @@ frontend.enableUpdateWorkflowExecutionAsyncAccepted:
   - value: true
 system.enableEagerWorkflowStart:
   - value: true
+frontend.workerVersioningRuleAPIs:
+  - value: true
 frontend.workerVersioningDataAPIs:
   - value: true
 frontend.workerVersioningWorkflowAPIs:
